--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!-- include React and Relay scripts (we don't bundle them) -->
-<script src=//fb.me/react-0.14.7.min.js></script>
-<script src=//fb.me/react-dom-0.14.7.min.js></script>
+<script src=/react.min.js></script>
+<script src=/react-dom.min.js></script>
 <script src=/relay/relay.min.js></script>
+
 <div id=content />
 <!-- now request our browserified bundle which will run the React.render -->
 <script src=/bundle.js></script>
